src/test/resources/Parser/SyntaxErrors/NonEmbeddableType.front
class A:
    embed a : [int32] = [int32, 1];